Fix layout in offer scraping page on mobile devices

--- a/app/components/CVCreator/CVForm.module.css
+++ b/app/components/CVCreator/CVForm.module.css
@@ -224,7 +224,6 @@
 
 .projects {
   grid-area: projects;
-  background-color: burlywood;
 }
 
 .control {
@@ -245,7 +244,6 @@
   --sectionMargin: 2rem;
   display: flex;
   flex-direction: column;
-  background-color: rgb(190, 48, 190);
   margin: 0;
   align-items: stretch;
   justify-content: stretch;
@@ -282,7 +280,6 @@
 
 @media only screen and (max-width: 768px) {
   .form {
-    background-color: red;
     width: calc("100vw");
     margin: 5rem 0rem 1rem 1.5rem;
   }
@@ -313,7 +310,6 @@
 
 @media only screen and (max-width: 600px) {
   .form {
-    background-color: blueviolet;
     width: calc("100vw");
     margin: 5rem 0.5rem 1rem 0.5rem;
   }
